# vegan-recipes

./: README.md  pyproject.toml
projeto/: settings.py
